# BoilerplatePP

./: README.md  cookiecutter.json
{{ cookiecutter.repo_name }}/: .gitignore  CMakeLists.txt  README.md
{{ cookiecutter.repo_name }}/include/: Calculator.hpp
{{ cookiecutter.repo_name }}/src/: CMakeLists.txt  Calculator.cpp
{{ cookiecutter.repo_name }}/test/: CMakeLists.txt  CalculatorTests.cpp
