file (GLOB_RECURSE PROJECT_SRCS *.cpp *.cxx *.cc *.C *.c *.h *.hpp)
set (PROJECT_BIN ${PROJECT_NAME})

if (NOT DEFINED PROJECT_BUILD_SHARED)
    if (CMAKE_CROSSCOMPILING)
        set(PROJECT_BUILD_SHARED 0)
    else (CMAKE_CROSSCOMPILING)
        set(PROJECT_BUILD_SHARED 1)
    endif (CMAKE_CROSSCOMPILING)
endif (NOT DEFINED PROJECT_BUILD_SHARED)

if (NOT DEFINED PROJECT_BUILD_STATIC)
set(PROJECT_BUILD_STATIC 1)
endif (NOT DEFINED PROJECT_BUILD_STATIC)

if (PROJECT_BUILD_STATIC)
    add_library(staticlib STATIC ${PROJECT_SRCS})
    target_link_libraries(staticlib ${PROJECT_LIBS})
    set_target_properties(staticlib PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${PROJECT_BIN} CLEAN_DIRECT_OUTPUT 1)
    install(TARGETS staticlib DESTINATION lib)
endif(PROJECT_BUILD_STATIC)

if (PROJECT_BUILD_SHARED)
    add_library(sharedlib SHARED ${PROJECT_SRCS})
    target_link_libraries(sharedlib ${PROJECT_LIBS})
    set_target_properties(sharedlib PROPERTIES VERSION "${APPLICATION_VERSION_MAJOR}.${APPLICATION_VERSION_MINOR}" OUTPUT_NAME ${PROJECT_BIN} CLEAN_DIRECT_OUTPUT 1)
    install(TARGETS sharedlib DESTINATION lib)
endif(PROJECT_BUILD_SHARED)